
  [ Mattia Rizzolo ]
  * debchange:
    + Update the manpage to mention that --bpo now targets stretch-backports,
      not jessie-backports.  Closes: #877877
  * debian/control:
    + Annotate the build-dependencies on perl and python3-all with :any.
  * debrsign:
    + Apply patch from Gilles Filippini <pini@debian.org> to add support for
      .buildinfo files.  Closes: #862324

 -- Chris Lamb <lamby@debian.org>  Wed, 27 Sep 2017 13:24:39 +0100

devscripts (2.17.10) unstable; urgency=medium

  [ Mattia Rizzolo ]
  * debian/tests/control:
    + Add dependency on debhelper; apparently autopkgtest in ubuntu doesn't
      pull it otherwise
  * debian/control:
    + Mark build-dependencies needed only for the tests with the <!nocheck>
      build profile; partially addresses: #870640
  * debian/source/options:
    + Remove the file, compression=xz has been the default for a long while.
  * debian/TODO:
    + Remove the file, unusued (=> outdated) since 2008 and mostly empty.
  * debian/rules:
    + Enable hardening build flags.  Closes: #873379
      Thanks Chris Lamb <lamby@debian.org> for the patch.
  * reproducible-check:
    + New script from Chris Lamb to check the reproducibility status of the
      installed packages.  Closes: #872514

  [ Antonio Terceiro ]
  * debc:
    + add --list-changes option, similar to --list-debs but for displaying the
      path to the .changes file.
  * debrepro:
    + proof-read manpage.

  [ James McCoy ]
  * Add hardening-check script.
  * debuild:
    + Add "--" in --help output for debian/rules mode.
  * test_package_lifecycle:
    + Fix expected output when run as root.
  * build-rdeps:
    + Use apt interfaces to find and read the sources files, fixing --old
      (non-dose) behavior when sources files are compressed.  (Closes:
      #698240)
    + Check Build-Depends-Arch for dependencies.
  * debcheckout:
    + Using --auth for git repositories now performs the clone with the