@@ -44,6 +44,9 @@ devscripts (2.17.11) UNRELEASED; urgency=medium
   * debrsign:
     + Apply patch from Gilles Filippini <pini@debian.org> to add support for
       .buildinfo files.  Closes: #862324
+  * uscan:
+    + Apply patch from Stephen Kitt <skitt@debian.org> to support https in the
+      sf.net special redirector.  Closes: #879207
 
  -- Chris Lamb <lamby@debian.org>  Wed, 27 Sep 2017 13:24:39 +0100
 
